--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="text" id="taskInput" placeholder="New Task">
         <button id="addTaskBtn">Add Task</button>
     </div>
-    <ul id="tasks"></ul>
+    <ul id="tasks" ondrop="drop(event)" ondragover="allowDrop(event)"></ul>
 </div>
 </body>
 </html>
