--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2 class="h">Todo List</h2>
     <div class="center">
         <input type="text" id="taskInput" placeholder="New Task">
+        <input type="number" id="priorityInput" placeholder="Priority" min="1">
         <button id="addTaskBtn">Add Task</button>
     </div>
     <ul id="tasks" ondrop="drop(event)" ondragover="allowDrop(event)"></ul>
