local storage and unworking URLSearchParams.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="text" id="taskInput" placeholder="New Task">
         <input type="number" id="priorityInput" placeholder="Priority" min="1">
         <button id="addTaskBtn">Add Task</button>
+        <button id="toggleDoneBtn">Toggle Done</button>
     </div>
     <ul id="tasks" ondrop="drop(event)" ondragover="allowDrop(event)"></ul>
 </div>
